# HR

./: .codexrc  .dockerignore  .env.example  .env.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CRITERIA.md  AGENTS.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_PLAN.md  AUDIT.md  AUDIT_REPORT.md  AUDIT_TEST1.md  AUTOMATION_ROADMAP.md  Audit.md  BACKEND_AUDIT.md  BACKLOG.md  BACKLOG_SUMMARY.md  CHANGELOG_DEV.md  CLAUDE.md  CODEX.md  CODEX_EXECUTION_PLAN.md  CODEX_FIRST_WAVE_RECOMMENDATION.md  COMPLETE_ARCHITECTURE_OVERVIEW.md  COMPONENT_IMPLEMENTATION_SPECS.md  CONTRIBUTING.md  CRITICAL_USER_FLOWS.md  CURRENT_PROGRAM_STATE.md  CURRENT_TASK.md  CURRENT_TASK_TEMPLATE.md  DASHBOARD_CHANGELOG.md  DEPLOYMENT_GUIDE.md  DESIGN_AUDIT_REPORT.md  DESIGN_DECISIONS_LOG.md  DESIGN_QA_CHECKLIST.md  DESIGN_REDESIGN_PRD.md  DESIGN_REDESIGN_ROADMAP.md  DESIGN_SYSTEM_PLAN.md  DESIGN_SYSTEM_SPEC.md  (+106 more)
.claude/agents/: admin-panel-frontend-dev.md  qa-frontend-tester.md  ui-ux-designer.md
.codex/: checklist.md  config.toml  system.md
.codex/audit/: architect_decisions.md  processed.txt  system_prompt.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: branch-cleanup.yml  ci.yaml  ci.yml  dependency-audit.yml  migration-contract.yml  ui-preview.yml
ADR/: ADR-0001-frontend-build-vite.md
admin_app/: admin.py  db.py  init_db.py  main.py  models.py  repo.py  seed.py
admin_server/: __init__.py  app.py
admin_server/templates/: base.html  cities_list.html  questions_edit.html  questions_list.html  recruiters_edit.html  recruiters_list.html  recruiters_new.html  slots_new.html  templates_edit.html  templates_new.html
artifacts/audit/: 2026-04-16-api-inventory.csv  2026-04-16-db-model-inventory.csv  2026-04-16-risk-register.csv  2026-04-16-techlead-audit.md  2026-04-19-recruitsmart-unified-redesign-strategy.md  2026-04-19-ui-ux-audit-candidate-surfaces.md
artifacts/patches/: high_impact_fixes.diff  p0_manual_slot_guard.patch
artifacts/perf/: admin_ui_metrics.prom  notifications_metrics.prom  python_http_profiles.json  read_heavy_dashboard_incoming.json  write_heavy_auth_token.json
artifacts/recheck_v2/: RELEASE_GATE_CHECKLIST.md
artifacts/recheck_v3/: RELEASE_GATE_CHECKLIST.md  ops_health_v3.json
audit/: ACTION_PLAN.md  API_MAP.md  CSS_SIZE.md  DB_ERD.md  DEPS.md  DEVELOPMENT_PLAN.md  DIAGNOSIS.md  ESTIMATES.md  INVENTORY.json  INVENTORY.md  LOGS.txt  METRICS.md  PERF_BASELINE.md  QUALITY.md  REPORT.md  REPO_MAP.md  RISKS.md  SECURITY.md  SECURITY_GAPS.md  collect_metrics.py  generate_inventory.py  metrics.json  run_smoke_checks.py
backend/core/: audit.py  (+26 more)
codex/: CODEOWNERS.md  bootstrap.md  codex.yaml  guidelines.md
data/: app.sqlite3.bak  bot.db
docs/: AI_COACH_RUNBOOK.md  AI_INTERVIEW_SCRIPT_RUNBOOK.md  API_SPEC.md  ARCHITECTURE.md  BRANCH_AND_RELEASE_POLICY.md  BUGFIX_DUPLICATE_NOTIFICATIONS.md  CONTRIBUTING.md  DATABASE_SESSION_BEST_PRACTICES.md  DATA_MODEL.md  DECISIONS.md  DEPENDENCY_INJECTION.md  DEPLOYMENT.md  DESIGN_SYSTEM_CANDIDATES_PAGE.md  DEVEX.md  DesignSystem.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  LIQUID_GLASS_QUICKSTART.md  LOCAL_DEV.md  MIGRATIONS.md  MIGRATION_RECONCILIATION_0105.md  NOTIFICATIONS_E2E.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  PROD_READINESS.md  PROJECT_AUDIT_REPORT.md  PROJECT_OVERVIEW.md  PR_PLAN.md  PR_TEMPLATE.md  QA_AUDIT_REPORT_2026-02-26.md  QUALITY_SCORECARD.md  README.md  README_REDESIGN.md  RELEASE_CHECKLIST.md  ROADMAP.md  ROADMAP_Q4_2025.md  RUNBOOK.md  SCALING_ROADMAP.md  SECURITY.md  SERVER_STABILITY.md  (+23 more)
previews/: candidate-detail.html  candidate-new.html  candidates.html  cities.html  index.html  questions.html  recruiter-new.html  recruiters.html  slot-new.html  slots.html  templates.html
scripts/: audit_tojson.sh  backup_db.sh  check_candidate.py  check_failed_notifications.py  check_openapi_drift.py  check_slot_2_notification.py  ci_pytest.py  codex.sh  collect_ux.py  contour_preflight.py  deploy_production.sh  deploy_systemd.sh  dev_admin.sh  dev_admin_restart.sh  dev_bot.sh  dev_crm.sh  dev_doctor.py  dev_max_bot.sh  dev_max_live.sh  dev_server.py  diagnose_notifications.py  diagnose_server.py  e2e_notifications_sandbox.py  export_interview_script_dataset.py  export_openapi.py  fix_slot_2_notification.py  formal_gate_sprint12.py  generate_waiting_candidates.py  loadtest_http_capacity.sh  loadtest_http_mix.sh  loadtest_http_spike.sh  loadtest_http_steady.sh  loadtest_notifications.py  max_owner_preflight.py  max_pilot_cohort_audit.py  migrate_city_templates.py  migrate_legacy_templates.py  perf_gate.sh  prod_smoke.sh  profile_phase_a_backfill_readiness.py  (+21 more)
tests/: conftest.py  reproduce_issue_1.py  test_action_endpoint.py  test_admin_auth_form_admin_env.py  test_admin_auth_no_basic_challenge.py  test_admin_candidate_chat_actions.py  test_admin_candidate_chat_ui.py  test_admin_candidate_schedule_slot.py  test_admin_candidate_status_update.py  test_admin_candidates_service.py  test_admin_cities_api.py  test_admin_csrf_policy.py  test_admin_max_runtime_surfaces.py  test_admin_message_templates.py  test_admin_message_templates_sms.py  test_admin_message_templates_update.py  test_admin_notifications_feed_api.py  test_admin_notifications_service.py  test_admin_recruiters_ui.py  test_admin_slots_api.py  test_admin_state_nullbot.py  test_admin_surface_hardening.py  test_admin_template_keys.py  test_admin_templates_legacy_create_revive.py  test_admin_ui_auth_startup.py  test_admin_ui_services.py  test_admin_ui_utils.py  test_ai_copilot.py  test_api_presets.py  test_application_event_publisher_contract.py  test_application_event_store_sqlalchemy.py  test_application_idempotency_migration.py  test_application_persistent_idempotency_repository.py  test_application_resolver_contract.py  test_application_sqlalchemy_repositories.py  test_bot_app.py  test_bot_app_smoke.py  test_bot_attendance.py  test_bot_candidate_status_text.py  test_bot_confirmation_flows.py  (+171 more)
tools/: recompute_weekly_kpis.py  render_previews.py  report_css_size.py  static_lint.mjs
ui_screenshots/: README.md
(+1307 files in other folders)
