[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["backend", "admin_server", "tests"]
combine_as_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend", "admin_server", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E402"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-admin-ui"
version = "0.1.0"
description = "Liquid Glass admin preview tooling"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.112.0",
  "starlette==0.37.2",
  "uvicorn[standard]==0.30.6",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.4",
  "python-multipart==0.0.9",
  "aiofiles==23.2.1",
  "aiosqlite==0.20.0",
  "SQLAlchemy[asyncio]==2.0.32",
  "greenlet==3.2.2",
]

[project.optional-dependencies]
dev = [
  "aiohttp==3.13.3",
  "aiogram==3.24.0",
  "redis==7.1.0",
  "httpx==0.28.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "playwright==1.58.0",
  "ruff==0.14.14",
  "black==26.1.0",
  "isort==7.0.0",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "alembic==1.18.3",
  "fakeredis==2.33.0",
  "APScheduler==3.11.2",
  "sqladmin==0.22.0",
  "sentry-sdk[fastapi]==2.51.0",
]

[tool.setuptools]
packages = ["backend", "admin_server"]
