[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["backend", "tests"]
combine_as_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E402"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "no_db_cleanup: skip database setup/teardown for lightweight tests",
    "notifications: tests related to the notification subsystem",
    "integration: integration tests requiring external services (Redis, etc.)",
]
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-admin-ui"
version = "0.1.0"
description = "Liquid Glass admin preview tooling"
requires-python = ">=3.11"
dependencies = [
  "aiofiles==25.1.0",
  "aiohttp==3.13.3",
  "aiogram==3.26.0",
  "APScheduler==3.11.2",
  "asyncpg==0.31.0",
  "fastapi==0.135.1",
  "starlette==1.0.0",
  "uvicorn[standard]==0.42.0",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.6",
  "python-multipart==0.0.22",
  "passlib[bcrypt]==1.7.4",
  "PyJWT[crypto]==2.12.1",
  "psycopg[binary]==3.3.3",
  "redis==7.3.0",
  "slowapi==0.1.9",
  "sqladmin==0.23.0",
  "SQLAlchemy[asyncio]==2.0.48",
  "greenlet==3.3.2",
  "starlette-wtf==0.4.5",
  "pypdf==6.9.1",
  "prometheus-client==0.24.1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.20.0",
  "aiohttp==3.13.3",
  "aiogram==3.26.0",
  "redis==7.3.0",
  "httpx==0.28.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "playwright==1.57.0",
  "ruff==0.14.11",
  "black==25.12.0",
  "isort==7.0.0",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "alembic==1.18.1",
  "fakeredis==2.33.0",
  "APScheduler==3.11.2",
  "sqladmin==0.23.0",
  "sentry-sdk[fastapi]==2.19.2",
  "pypdf==6.9.1",
  "python-multipart==0.0.22",
  "Jinja2==3.1.6",
]

[tool.setuptools]
packages = ["backend"]
